[tool.poetry]
name = "tanker-go-sdk"
version = "0.1.0"
description = "Go client for Tanker"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = "2020.12.dev3119"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8 = "^3.7.9"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
